<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_30">



    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/lock_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lock_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_lock_24" />

    <TextView
        android:id="@+id/txt_by_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_6"
        android:text="@string/tyReRoll"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_icon" />

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_marginStart="@dimen/dp_4"

        android:layout_marginBottom="@dimen/dp_11"
        android:scaleType="fitXY"
        android:src="@drawable/sample"
        app:layout_constraintHeight_percent=".7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_by_roll"
        app:layout_constraintWidth_percent=".6" />

    <View
        android:id="@+id/green_box"

        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:background="@color/teal_200"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".77"
        app:layout_constraintStart_toEndOf="@+id/main_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".32" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/tyTime"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/green_box"
        app:layout_constraintStart_toStartOf="@+id/green_box"
        app:layout_constraintTop_toBottomOf="@+id/txt_lane_cafe" />

    <TextView
        android:id="@+id/txt_lane_cafe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:text="@string/tyLaneCafe"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/green_box"
        app:layout_constraintStart_toStartOf="@+id/green_box"
        app:layout_constraintTop_toBottomOf="@+id/logo_img" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_9"
        android:text="@string/tyDate"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/green_box"
        app:layout_constraintStart_toStartOf="@+id/green_box"
        app:layout_constraintTop_toTopOf="@+id/green_box" />

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="@dimen/dp_45"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="@+id/green_box"
        app:layout_constraintStart_toStartOf="@+id/green_box"
        app:layout_constraintTop_toBottomOf="@+id/txt_date"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/Lock1_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintStart_toStartOf="@+id/green_box"
        app:layout_constraintTop_toBottomOf="@+id/green_box"
        app:srcCompat="@drawable/ic_baseline_lock_24" />

    <ImageView
        android:id="@+id/Lock2_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="@+id/green_box"
        app:layout_constraintStart_toStartOf="@+id/green_box"
        app:layout_constraintTop_toBottomOf="@+id/green_box"
        app:srcCompat="@drawable/ic_baseline_lock_24" />

    <ImageView
        android:id="@+id/Lock3_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="@+id/green_box"
        app:layout_constraintTop_toBottomOf="@+id/green_box"
        app:srcCompat="@drawable/ic_baseline_lock_24" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ty1230"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/sp_10"
        app:layout_constraintEnd_toEndOf="@+id/Lock1_img"
        app:layout_constraintStart_toStartOf="@+id/Lock1_img"
        app:layout_constraintTop_toBottomOf="@+id/Lock1_img" />

    <TextView
        android:id="@+id/txt_check_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tyCheckIn"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/sp_10"
        app:layout_constraintEnd_toEndOf="@+id/Lock2_img"
        app:layout_constraintStart_toStartOf="@+id/Lock2_img"
        app:layout_constraintTop_toBottomOf="@+id/Lock2_img" />

    <TextView
        android:id="@+id/txt_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tyGames"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/sp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Lock3_img"
        app:layout_constraintStart_toStartOf="@+id/Lock3_img"
        app:layout_constraintTop_toBottomOf="@+id/Lock3_img" />

    <View
        android:id="@+id/rating_btn"

        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@drawable/circle_ui"
        app:layout_constraintStart_toStartOf="@+id/main_image"
        app:layout_constraintTop_toTopOf="@+id/main_image" />

    <TextView
        android:id="@+id/rating_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ty0"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/sp_10"
        app:layout_constraintBottom_toBottomOf="@+id/rating_btn"
        app:layout_constraintEnd_toEndOf="@+id/rating_btn"
        app:layout_constraintEnd_toStartOf="@+id/point_text"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="@+id/rating_btn"
        app:layout_constraintTop_toTopOf="@+id/rating_btn"
        />

    <TextView
        android:id="@+id/point_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ty0"

        android:textSize="@dimen/sp_10"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@+id/rating_btn"
        app:layout_constraintEnd_toEndOf="@+id/rating_btn"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="@+id/rating_btn"
        app:layout_constraintTop_toTopOf="@+id/rating_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>