<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"

    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_10"
        android:elevation="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/dp_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingVertical="@dimen/dp_10"
            android:paddingHorizontal="@dimen/dp_20"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_img"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:paddingVertical="@dimen/dp_10"
                android:paddingHorizontal="@dimen/dp_20"
                android:padding="@dimen/dp_10"
                android:src="@drawable/sample"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/tyAlya"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/sp_18"
                app:layout_constraintBottom_toBottomOf="@+id/circle_img"
                app:layout_constraintStart_toEndOf="@+id/circle_img"
                app:layout_constraintTop_toTopOf="@+id/circle_img">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_height="wrap_content"
                android:text="@string/ty1230"
                android:padding="@dimen/dp_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:padding="@dimen/dp_10"
                android:text="@string/tyHeyGuys"
                android:textSize="@dimen/sp_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circle_img"
               />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>